--- a/public/product-edit/styles.css
+++ b/public/product-edit/styles.css
@@ -206,11 +206,11 @@ footer {
 
 /* single product right pane */
 #p-status0:focus {
-  border-color: #ffc107;
+  border-color: rgb(255, 193, 7);
   box-shadow: 0 0 0 0.25rem rgba(255, 193, 7, 0.3);
 }
 
 #p-status0:checked {
   background-color: #ffc107;
-  border-color: #ffc107;
+  border-color: rgb(255, 193, 7);
 }
