adding new order feature

--- a/src/orders/styles.scss
+++ b/src/orders/styles.scss
@@ -49,7 +49,7 @@ table.items  {
    .edit-qty{text-align:right; max-width:150px;}
    .tp{text-align:right; max-width:100px;}
    .edit-tp{text-align:right; max-width:250px;}
-   .vars{font-style: italic;padding-left: 8px;margin-left:4px;margin-top:4px;font-size: 0.8rem;border-left: 2px solid #ff0079;}
+   .vars{font-style: italic;font-size: 0.8rem;border-left: 2px solid #ff0079;}
    .vars:empty{display:none;}
    .order-item-options{cursor:pointer;}
    .add-item{cursor:pointer;}
