toast responsive fix

--- a/public/product-edit/styles.css
+++ b/public/product-edit/styles.css
@@ -7,6 +7,11 @@ footer {
   margin-bottom: 32px;
 }
 
+@media (max-width: 500px) {
+  .toast {
+    width: auto;
+  }
+}
 /* dependency simple tags */
 .simple-tags {
   background-color: #fff;
