--- a/public/orders/styles.css
+++ b/public/orders/styles.css
@@ -7,6 +7,11 @@ footer {
   margin-bottom: 32px;
 }
 
+@media (max-width: 500px) {
+  .toast {
+    width: auto;
+  }
+}
 /* orders table */
 .table {
   min-width: 760px;
