--- a/src/_/_global.scss
+++ b/src/_/_global.scss
@@ -5,3 +5,11 @@ footer {
     margin-top: 32px;
     margin-bottom: 32px;
 }
+
+@media (max-width: 500px){
+
+    .toast{ 
+        width: auto;
+    }
+}
+
