--- a/public/orders/styles.css
+++ b/public/orders/styles.css
@@ -81,7 +81,7 @@ footer {
   background: transparent;
 }
 
-/* order preview mode */
+/* order preview */
 .modal-header {
   border-bottom: 0;
 }
@@ -148,6 +148,7 @@ table.items .s-list {
   background: white;
   list-style: none;
   cursor: pointer;
+  z-index: 10;
 }
 table.items .s-list li {
   padding: 8px 16px;
@@ -164,6 +165,150 @@ table.items [data-toggle=false].s-list {
   display: none;
 }
 
+/* order preview variations */
+.item-vars-input .kp-check,
+.item-vars-input .kp-radio {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+
+.item-vars-input .tag {
+  font-size: 0.8rem;
+  padding: 2px 8px 4px 8px;
+  margin-left: 4px;
+  vertical-align: middle;
+}
+
+.item-vars-input .kp-radio label {
+  display: flex;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  padding: 8px 0;
+  border-bottom: 1px solid var(--bs-light);
+}
+
+.item-vars-input .kp-radio label span {
+  display: flex;
+  align-items: center;
+  padding: 8px 8px 8px 8px;
+  border-radius: 99em;
+  transition: 0.25s ease;
+}
+
+.item-vars-input .kp-radio label span:before {
+  display: flex;
+  flex-shrink: 0;
+  content: "";
+  background-color: var(--bs-white);
+  width: 1.5em;
+  height: 1.5em;
+  border-radius: 50%;
+  margin-right: 12px;
+  transition: 0.25s ease;
+  box-shadow: inset 0 0 0 0.125em var(--bs-blue);
+}
+
+.item-vars-input .kp-radio input {
+  position: absolute;
+  left: -9999px;
+}
+
+.item-vars-input .kp-radio input:checked + span:before {
+  box-shadow: inset 0 0 0 0.4375em var(--bs-blue);
+}
+
+.item-vars-input .kp-check .price,
+.item-vars-input .kp-radio .price {
+  color: var(--txtColorB);
+  text-align: right;
+  display: inline-block;
+  margin: auto 8px auto auto;
+  float: right;
+}
+
+/* https://codepen.io/avstorm/pen/Mowqre */
+.item-vars-input .kp-check label {
+  user-select: none;
+  cursor: pointer;
+  margin: 0px 0;
+  padding: 16px 0;
+  border-bottom: 1px solid var(--bs-light);
+}
+
+.item-vars-input .kp-check label input:checked + .checkbox {
+  border-color: var(--bs-blue);
+}
+
+.item-vars-input .kp-check label input:checked + .checkbox svg path {
+  fill: var(--bs-blue);
+}
+
+.item-vars-input .kp-check label input:checked + .checkbox svg polyline {
+  stroke-dashoffset: 0;
+}
+
+.item-vars-input .kp-check label :hover .checkbox svg path {
+  stroke-dashoffset: 0;
+}
+
+.item-vars-input .kp-check label .checkbox {
+  position: relative;
+  top: 2px;
+  float: left;
+  margin-right: 8px;
+  width: 20px;
+  height: 20px;
+  border: 2px solid var(--bs-dark);
+  border-radius: 3px;
+  margin-left: 8px;
+  margin-right: 12px;
+}
+
+.item-vars-input .kp-check label .checkbox svg {
+  position: absolute;
+  top: -2px;
+  left: -2px;
+}
+
+.item-vars-input .kp-check label .checkbox svg path {
+  fill: none;
+  stroke: var(--bs-blue);
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: 71px;
+  stroke-dashoffset: 71px;
+  transition: all 0.6s ease;
+}
+
+.item-vars-input .kp-check label .checkbox svg polyline {
+  fill: none;
+  stroke: var(--bs-white);
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: 18px;
+  stroke-dashoffset: 18px;
+  transition: all 0.3s ease;
+}
+
+.item-vars-input .kp-check label > span {
+  pointer-events: none;
+  vertical-align: middle;
+  display: inline-block;
+}
+
+.item-vars-input .kp-check label input {
+  position: absolute;
+  z-index: -1;
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+/* search orders */
 @media (max-width: 500px) {
   input#usearch {
     margin-top: 16px;
