--- a/src/orders/styles.scss
+++ b/src/orders/styles.scss
@@ -38,6 +38,7 @@
 /* order preview */
 .modal-header{border-bottom: 0;}
 .modal-footer{border-top: 0;}
+.modal-body-cont{max-width: 840px;margin: auto;}
 .product_body{display: block;}
 .mloader{display: none;}
 table.list td{font-size:24px;}
