--- a/public/product-edit/styles.css
+++ b/public/product-edit/styles.css
@@ -116,11 +116,13 @@ footer {
 .p-img-cont {
   float: left;
   max-width: 120px;
-  margin-right: 5px;
+  margin-right: 4px;
+  margin-bottom: 4px;
 }
 
 .p-img-cont p {
   cursor: pointer;
+  margin: 0;
 }
 
 .p-img-cont p img {
