--- a/src/orders/styles.scss
+++ b/src/orders/styles.scss
@@ -1,6 +1,5 @@
 @import "../_/_global.scss";
   
-  
 /* orders table */
 .table{min-width:760px;}
 .list-icon{color:#9b9b9b;font-size:32px;margin-left:32px;cursor:pointer;}
@@ -15,7 +14,18 @@
 
   .table{min-width:500px;}
 }
+
+.order-details,
 .view-order{cursor:pointer;}
+.row-mark0{background-color: transparent;}
+.row-mark1{background-color: #fff9e6;}
+.row-mark2{background-color: #fff2cc;}
+.row-mark3{background-color: #ffecb3;}
+.row-mark4{background-color: #ffe699;}
+.row-mark5{background-color: #ffdf80;}
+.row-mark6{background-color: #ffd966;}
+.row-mark7{background-color: #ffd24d;}
+.row-mark8{background-color: #ffcc33;}
 
 /* table filtering */
 .st-opts{
@@ -44,7 +54,9 @@
 table.list td{font-size:24px;}
 
 table.items  {
-    width:100%;display:table;font-size: 0.9rem;
+    width:100%;
+	display:table;
+	// font-size: 0.9rem;
    td{vertical-align:top;}
    .qty{text-align:right; max-width:100px;}
    .edit-qty{text-align:right; max-width:200px;}
