--- a/src/product-edit/styles.scss
+++ b/src/product-edit/styles.scss
@@ -15,8 +15,8 @@
 .faq input,.faq .form-check{width:100%;}
 .faq i.remove{margin-left:8px;}
 .list-wrapper ul.faq li{border:0;}
-.p-img-cont{float: left; max-width: 120px;margin-right: 5px;}
-.p-img-cont p{cursor:pointer;}
+.p-img-cont{float: left; max-width: 120px;margin-right:4px;margin-bottom:4px;}
+.p-img-cont p{cursor:pointer;margin:0}
 .p-img-cont p img{object-fit:cover;}
 .p-img-cont p img:hover{opacity: 0.9;}
 .p-img-cont p .remove{position:absolute;font-weight:bold;float:right;margin-left:-24px;line-height:1;font-size:24px;padding:4px;color:#76838f;}
