new product price validation added

--- a/src/_/_global.scss
+++ b/src/_/_global.scss
@@ -5,11 +5,12 @@ footer {
     margin-top: 32px;
     margin-bottom: 32px;
 }
-.po{cursor:pointer;}
+.po{
+    cursor:pointer;
+}
 @media (max-width: 500px){
 
     .toast{ 
         width: auto;
     }
 }
-
