--- a/src/orders/styles.scss
+++ b/src/orders/styles.scss
@@ -58,9 +58,9 @@ table.items  {
 	display:table;
 	// font-size: 0.9rem;
    td{vertical-align:top;}
-   .qty{text-align:right; max-width:100px;}
+   .qty{text-align:right; width:100px;}
    .edit-qty{text-align:right; max-width:200px;}
-   .tp{text-align:right; max-width:100px;}
+   .tp{text-align:right; max-width:120px;}
    .edit-tp{text-align:right; max-width:250px;}
    .vars{font-style: italic;font-size: 0.8rem;border-left: 2px solid #ff0079;}
    .vars:empty{display:none;}
